--- a/Cboe/public_html/assets/css/login.css
+++ b/Cboe/public_html/assets/css/login.css
@@ -50,6 +50,7 @@ label {
 }
 
 input[type="email"],
+input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 12px;
@@ -61,9 +62,24 @@ input[type="password"] {
 }
 
 input[type="email"]:focus,
+input[type="text"]:focus,
 input[type="password"]:focus {
     outline: none;
     box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.25);
+}
+
+/* eye icon */
+.toggle-eye {
+    position: absolute;
+    right: 12px;
+    top: 63%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 18px;
+    color: #666;
+    user-select: none;
+    pointer-events: auto;
+    z-index: 2;
 }
 
 .error-message {
@@ -162,11 +178,11 @@ button:active {
 
 .modal-content {
     background-color: #fff;
-    margin: 10% auto;
+    margin: 15% auto;
     padding: 1.5rem;
     border-radius: 8px;
     width: 90%;
-    height: 50%;
+    height: 30%;
     max-width: 400px;
     position: relative;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
@@ -175,7 +191,7 @@ button:active {
 .modal-icon {
     text-align: center;
     font-size: 2.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.7rem;
 }
 
 .modal.success .modal-content {
