--- a/Cboe/public_html/assets/css/register.css
+++ b/Cboe/public_html/assets/css/register.css
@@ -53,8 +53,9 @@ select {
     display: flex;
     padding: 12px;
     width: 100%;
+    height: 3rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 8px;
     box-sizing: border-box;
     transition: border-color 0.3s ease;
 }
@@ -121,6 +122,23 @@ input[type="password"]:focus {
     box-shadow: 0 0 0 3px rgba(138, 43, 226, 0.25);
 }
 
+
+/* eye icon */
+/*
+.toggle-eye {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 18px;
+    color: #666;
+    user-select: none;
+    pointer-events: auto;
+    z-index: 2;
+} */
+
+
 .error-message {
     color: #dc3545;
     font-size: 0.875em;
@@ -144,7 +162,7 @@ input.valid {
 }
 
 .checkbox-group input[type="checkbox"] {
-    width: auto;
+    width: 0.6rem;
     margin-right: 10px;
     transform: scale(1.2);
 }
@@ -258,7 +276,7 @@ button:active {
     border: 1px solid #888;
     border-radius: 8px;
     width: 80%;
-    height: auto;
+    height: 100px;
     /* line-height: 300px; */
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
