--- a/Cboe/public_html/admin/assets/css/dashboard.css
+++ b/Cboe/public_html/admin/assets/css/dashboard.css
@@ -1,96 +1,485 @@
+:root {
+    --bg-color: #FAF9F6;
+    --border-color: #3d3832;
+    --primary-text: #4B2E2B;
+    --navbar-bg: #ffffff;
+    --sidebar-bg: #f3efea;
+    --sidebar-text: #4b2e2b;
+    --sidebar-active-text: #a9745d;
+    --sidebar-active-bg: #e5dcc3;
+    --footer-bg: #f3efea;
+    --button-color: #a9745d;
+    --button-hover: #8b5e46;
+
+    --sidebar-width-open: 250px;
+    --sidebar-width-closed: 70px;
+    --current-sidebar-width: var(--sidebar-width-open);
+
+}
+
+body.dark-mode {
+    --bg-color: #1c1b18;
+    --border-color: #E5DCC3;
+    --primary-text: #f5ede3;
+    --navbar-bg: #2e2b26;
+    --sidebar-bg: #2a2622;
+    --sidebar-text: #f5ede3;
+    --sidebar-active-text: #d9a074;
+    --sidebar-active-bg: #3d3832;
+    --footer-bg: #2e2b26;
+    --button-color: #d9a074;
+    --button-hover: #c78a5e;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 0 20px;
-      background: #fafafa;
-    }
+    font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+    background-color: var(--bg-color);
+    color: var(--primary-text);
+    transition: background-color 0.3s ease, color 0.3s ease;
+    line-height: 1.5;
+}
 
-    h1, h2 {
-      text-align: center;
-      color: #333;
-    }
+#dashboard-container {
+    display: grid;
+    transition: grid-template-columns 0.3s ease, --current-sidebar-width 0.3s ease;
+    grid-template-columns: var(--current-sidebar-width) 1fr;
+    grid-template-rows: 60px 1fr;
+    height: 100vh;
+    overflow: hidden;
+}
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-bottom: 30px;
-      background: #fff;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
+#sidebar {
+    /* grid-area: 1 / 1 / 3 / 2; */
+    background-color: var(--sidebar-bg);
+    color: var(--sidebar-text);
+    border-right: 1px solid var(--border-color);
+    padding: 20px 0;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0, 3s ease;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    transition: all 0.3s ease;
+}
 
-    th, td {
-      border: 1px solid #ddd;
-      padding: 10px 12px;
-      text-align: left;
-    }
+#dashboard-container.sidebar-collapsed {
+    --current-sidebar-width: var(--sidebar-width-closed);
+}
 
-    th {
-      background-color: #f4f4f4;
-      font-weight: 600;
-    }
 
-    input[type="number"] {
-      width: 100px;
-      padding: 5px;
-      margin-right: 10px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-    }
+.sidebar-header {
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 0 15px;
+    transition: padding 0.3s ease;
+}
 
-    button {
-      padding: 6px 12px;
-      border: none;
-      border-radius: 3px;
-      cursor: pointer;
-      font-weight: 600;
-      transition: background-color 0.3s ease;
-    }
+.sidebar-header h2 {
+    color: var(--primary-color);
+    font-size: 1.5em;
+    font-weight: 700;
+    white-space: nowrap;
+    transition: opacity 0.3s ease, font-size 0.3s ease;
+}
 
-    button.update-btn {
-      background-color: #007bff;
-      color: white;
-    }
+#dashboard-container.sidebar-collapsed .sidebar-header h2 {
+    opacity: 0;
+    font-size: 0;
+}
 
-    button.update-btn:hover {
-      background-color: #0056b3;
-    }
+#sidebar nav {
+    flex-grow: 1;
+}
 
-    button.approve-btn {
-      background-color: #28a745;
-      color: white;
-      margin-right: 10px;
-    }
+#sidebar nav ul {
+    list-style-type: none;
+}
 
-    button.approve-btn:hover {
-      background-color: #1e7e34;
-    }
+#sidebar nav a {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    text-decoration: none;
+    color: var(--sidebar-text);
+    transition: background-color 0.2s ease, color 0.2s ease;
+    white-space: nowrap;
+}
 
-    button.reject-btn {
-      background-color: #dc3545;
-      color: white;
-    }
+#sidebar nav a i {
+    width: 30px;
+    font-size: 1.2em;
+    text-align: center;
+}
 
-    button.reject-btn:hover {
-      background-color: #a71d2a;
-    }
+#sidebar nav a span {
+    font-weight: 600;
+    opacity: 1;
+    transition: opacity 0.3s ease, width 0.3s ease, margin-left 0.3s ease;
+    margin-left: 10px;
+}
 
-    .message {
-      padding: 12px;
-      margin-bottom: 20px;
-      border-radius: 6px;
-      font-weight: 600;
-      text-align: center;
-    }
+#dashboard-container.sidebar-collapsed #sidebar nav a span {
+    opacity: 0;
+    width: 0;
+    margin-left: 0;
+    overflow: hidden;
+}
 
-    .message.success {
-      color: #155724;
-      background-color: #d4edda;
-      border: 1px solid #c3e6cb;
-    }
+#sidebar nav a:hover,
+#sidebar nav a.active {
+    background-color: var(--sidebar-active-bg);
+    color: var(--sidebar-active-text);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-    .message.error {
-      color: #721c24;
-      background-color: #f8d7da;
-      border: 1px solid #f5c6cb;
-    }
+#sidebar nav a.active {
+    border-radius: 1.9rem;
+    transform: translate(-25px);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
+}
+
+.sidebar-footer {
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border-top: 1px solid var(--border-color);
+    margin-top: auto;
+}
+
+.sidebar-btn {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background: none;
+    border: var(--border-color);
+    color: var(--sidebar-text);
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 600;
+    white-space: nowrap;
+    transition: background-color 0.2s ease, color 0.2s;
+}
+
+.sidebar-btn i {
+    width: 30px;
+    font-size: 1.2em;
+    text-align: center;
+    margin-right: 10px;
+    transition: margin-right 0.3s ease;
+}
+
+.sidebar-btn span {
+    opacity: 1;
+    transition: opacity 0.3s ease, width 0.3s ease;
+}
+
+/* .sidebar-btn:hover {
+    background-color: var(--primary-color);
+    color: white;
+} */
+
+.profile-sidebar-btn {
+    background: none;
+    border: 1px solid var(--primary-text);
+    color: var(--primary-color);
+}
+
+.profile-sidebar-btn:hover {
+    background-color: var(--primary-text);
+    color: white;
+}
+
+#dashboard-container.sidebar-collapsed .sidebar-footer .sidebar-btn span {
+    opacity: 0;
+    width: 0;
+    overflow: hidden;
+}
+
+#dashboard-container.sidebar-collapsed .sidebar-footer .sidebar-btn i {
+    margin-right: 0;
+}
+
+#main-content {
+    grid-area: 1 / 2 / 3 / 3;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    transition: transform 0.3s ease;
+}
+
+#navbar {
+    grid-area: 1 / 2 / 2 / 3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--navbar-bg);
+    padding: 0 20px;
+    height: 60px;
+    border-bottom: 1px solid var(--border-color);
+    color: var(--navbar-text);
+    transition: all 0.3s ease;
+    flex-shrink: 0;
+}
+
+.navbar-left,
+.navbar-right {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.company-name {
+    font-size: 1.5em;
+    font-weight: 700;
+    color: var(--primary-color);
+}
+
+.hamburger-btn {
+    background: none;
+    border: none;
+    font-size: 1.5em;
+    cursor: pointer;
+    color: var(--navbar-text);
+    display: block;
+    transition: color 0.2s ease;
+}
+
+.hamburger-btn i {
+    transition: transform 0.3s ease;
+}
+
+.hamburger-btn.is-active i {
+    transform: rotate(90deg);
+}
+
+.profile-container {
+    position: relative;
+    cursor: pointer;
+}
+
+.profile-info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid var(--primary-color);
+}
+
+.user-name {
+    font-weight: 600;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 50px;
+    right: 0;
+    background-color: var(--sidebar-bg);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 150px;
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+
+.dropdown-menu.hidden {
+    display: none;
+}
+
+.dropdown-menu a {
+    text-decoration: none;
+    color: var(--sidebar-text);
+    padding: 10px 15px;
+    transition: background-color 0.2s;
+}
+
+.dropdown-menu a:hover {
+    background-color: var(--bg-color);
+}
+
+#content {
+    flex-grow: 1;
+    padding: 20px;
+    overflow-y: auto;
+}
+
+#page-title {
+    font-weight: 700;
+    font-size: 2em;
+    color: var(--text-color);
+    margin-bottom: 20px;
+}
+
+.dashboard-overview {
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+    grid-template-columns: repeat(3, 300px);
+    gap: 20px;
+    /* margin-bottom: 40px; */
+    margin: 0 auto;
+    width: 90%;
+}
+
+.card {
+    background-color: var(--card-bg);
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.flexible1 {
+    grid-column: span 2;
+}
+
+.flexible1 li {
+    list-style-type: none;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
+}
+
+.card-icon {
+    font-size: 2.5em;
+    color: var(--card-icon-color-light);
+}
+
+body.dark-mode .card-icon {
+    color: var(--card-icon-color-dark);
+}
+
+.card-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-title {
+    font-size: 1em;
+    color: var(--secondary-text-color);
+    margin-bottom: 5px;
+}
+
+.card-value {
+    font-size: 1.3em;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 30px;
+    background: var(--card-bg);
+    color: var(--text-color);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+thead {
+    color: var(--text-color);
+    border: var(--border-color);
+    background-color: var(--primary-text);
+    gap: 2rem;
+}
+
+th,
+td {
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    padding: 10px 12px;
+    text-align: left;
+}
+
+th {
+    background-color: #f4f4f4;
+    font-weight: 600;
+}
+
+input[type="number"] {
+    width: 100px;
+    padding: 5px;
+    margin-right: 10px;
+    border: 1px solid var(--border-color);
+    border-radius: 3px;
+}
+
+button {
+    padding: 6px 12px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-weight: 600;
+    transition: background-color 0.3s ease;
+}
+
+button.update-btn {
+    background-color: #007bff;
+    color: var(--primary-color);
+}
+
+button.update-btn:hover {
+    background-color: #0056b3;
+}
+
+button.approve-btn {
+    background-color: #28a745;
+    color: white;
+    margin-right: 10px;
+}
+
+button.approve-btn:hover {
+    background-color: #1e7e34;
+}
+
+button.reject-btn {
+    background-color: #dc3545;
+    color: white;
+}
+
+button.reject-btn:hover {
+    background-color: #a71d2a;
+}
+
+.message {
+    padding: 12px;
+    margin-bottom: 20px;
+    border-radius: 6px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.message.success {
+    color: #155724;
+    background-color: #d4edda;
+    border: 1px solid #c3e6cb;
+}
+
+.message.error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border: 1px solid #f5c6cb;
+}
