--- a/Cboe/public_html/assets/css/dashboard.css
+++ b/Cboe/public_html/assets/css/dashboard.css
@@ -152,6 +152,12 @@ body {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
+#sidebar nav a.active {
+  border-radius: 1.9rem;
+  transform: translate(-25px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
+}
+
 .sidebar-footer {
   padding: 20px 15px;
   display: flex;
