--- a/Cboe/public_html/assets/css/main.css
+++ b/Cboe/public_html/assets/css/main.css
@@ -144,7 +144,8 @@ nav {
     justify-content: center;
     align-items: center;
     position: fixed;
-    background: rgba(0, 0, 0, 0.85);
+    /*background: rgba(0, 0, 0, 0.85);*/
+    background: #999;
     top: 0;
     right: 0;
     width: 100vw;
