--- a/Cboe/public_html/assets/css/main.css
+++ b/Cboe/public_html/assets/css/main.css
@@ -152,7 +152,7 @@ nav {
     list-style-type: none;
     gap: 24px;
     z-index: 1001;
-    background: rgba(0, 0, 0, 0.9);
+    background: blue;
     backdrop-filter: none;
     -webkit-backdrop-filter: none;
     border: none;
