--- a/Cboe/public_html/assets/css/main.css
+++ b/Cboe/public_html/assets/css/main.css
@@ -125,6 +125,7 @@ nav {
     align-items: center;
     padding: 16px 20px;
     color: white;
+    z-index: 100;
     position: relative;
     background: rgba(255, 255, 255, 0.08);
     backdrop-filter: blur(24px);
