--- a/Cboe/public_html/assets/css/main.css
+++ b/Cboe/public_html/assets/css/main.css
@@ -136,7 +136,14 @@ nav {
 .logo {
     font-size: 1.6em;
     font-weight: 700;
+    /* margin-bottom: 1rem; */
     text-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
+
+.logo img {
+    height: 1.7rem;
+    margin-bottom: 0;
+    /* border-radius: 50%; */
 }
 
 .nav-links {
